[metadata]
name = faucet
version = 1.6.13
summary = Faucet is an OpenFlow controller that implements a layer 2 and layer 3 switch.
license = Apache-2
author = Faucet development team
author-email = faucet-dev@list.waikato.ac.nz
home-page = http://faucet.nz
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    ryu

[files]
packages =
    faucet
data_files =
    etc/ryu =
        etc/ryu/ryu.conf
    etc/ryu/faucet =
        etc/ryu/faucet/faucet.yaml
        etc/ryu/faucet/acls.yaml
        etc/ryu/faucet/gauge.yaml
        etc/ryu/faucet/aruba_pipeline.json
        etc/ryu/faucet/ofproto_to_ryu.json

[entry_points]
console_scripts =
    check_faucet_config = faucet.check_faucet_config:main
    fctl = faucet.fctl:main
