[metadata]
name = faucet
summary = Faucet is an OpenFlow controller that implements a layer 2 and layer 3 switch.
license = Apache-2
author = Faucet development team
author-email = faucet-dev@list.waikato.ac.nz
home-page = https://faucet.nz
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    ryu

[files]
packages =
    faucet
data_files =
    etc/faucet =
        etc/faucet/faucet.yaml
        etc/faucet/acls.yaml
        etc/faucet/gauge.yaml

[entry_points]
console_scripts =
    faucet = faucet.__main__:main
    gauge = faucet.__main__:main
    check_faucet_config = faucet.check_faucet_config:main
    fctl = faucet.fctl:main

[pytype]
python_version = 3.6
pythonpath =
    .:
    faucet:
    clib
disable =
    pyi-error,
    import-error
